[gd_scene format=3 uid="uid://vtu71v6m3r0a"]

[ext_resource type="Script" uid="uid://m8ek7donlk01" path="res://core/game_manager.gd" id="1_rw80f"]

[node name="GameManager" type="Node" unique_id=991276339]
script = ExtResource("1_rw80f")

[node name="CurrentSceneContainer" type="Node" parent="." unique_id=1245546689]

[node name="FadeLayer" type="CanvasLayer" parent="." unique_id=1533854022]
layer = 100

[node name="FadeRect" type="ColorRect" parent="FadeLayer" unique_id=1887329559]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
